# AYA_ex

./: CMakeLists.txt  README.md
ekz/: CMakeLists.txt  dot.cpp  dot.h  dot_space.cpp  dot_space.h  ekz.cpp  except.cpp  except.h
